services/basic-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: basic-app-service
spec:
  selector:
    app: basic-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
