services/premium-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: premium-app-service
spec:
  selector:
    app: premium-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
